# image2text

./: .gitignore  .travis-with-opencv.yml  .travis.yml  CMakeLists.txt  CharLevel.txt  LICENSE  README.md  Template.html  cmdline.h  division_of_work.docx  division_of_work.txt  image2text.sln  image2text.vcxproj  image2text.vcxproj.filters  mario.html  print.txt  result.txt
CharGrayRatioCalculator/: CMakeLists.txt  GenerateCharGraph.py  GrayRatio.cpp
WebClient/: Program.cs  Startup.cs  WebImage2Text.csproj  WebImage2Text.sln  appsettings.json  bundleconfig.json  image2text
WebClient/Controllers/: HomeController.cs  ImageProcesser.cs
WebClient/Models/: ErrorViewModel.cs  ImageViewModel.cs
WebClient/Properties/: launchSettings.json
WebClient/Properties/PublishProfiles/: FolderProfile.pubxml
WebClient/Views/: _ViewImports.cshtml
WebClient/Views/Home/: CharGraphHtml.cshtml  ColorHtml.cshtml  Error.cshtml  Image2Text.cshtml  Result.cshtml
WebClient/Views/Shared/: _Layout.cshtml
WebClient/wwwroot/css/: site.css
WebClient/wwwroot/js/: site.js
docs/: demand_of_analysis.txt
env/: ubuntu.sh
include/: GrayRatio.h  cmdline.h  common.h
src/: main.cpp
